Kubernetes/network/net-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
        - podSelector:        ##해당 label 가진 경우만
            matchLabels:
              name: api-pod
          namespaceSelector:  ##해당 nampspace 에서만
            matchLabels:
              name: prod
        - ipBlock:            ## IP 제한
             cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.5.10/32
      ports:
        - protocol: TCP
          port: 80
